[gd_scene load_steps=8 format=3 uid="uid://c606lsxjs5hcg"]

[ext_resource type="Script" path="res://scripts/choanocyte.gd" id="1_6cppo"]
[ext_resource type="Texture2D" uid="uid://sg80hel8fgdk" path="res://assets/sprites/choanocyte_spritesheet.png" id="1_cff3d"]

[sub_resource type="Animation" id="Animation_34lck"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_5rvto"]
resource_name = "exist"
length = 0.8
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_r5h8y"]
_data = {
"RESET": SubResource("Animation_34lck"),
"exist": SubResource("Animation_5rvto")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_xctfb"]
size = Vector2(35, 20)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_uxxx6"]
size = Vector2(75, 66)

[node name="Choanocyte" type="StaticBody2D"]
script = ExtResource("1_6cppo")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("1_cff3d")
hframes = 9
frame = 6

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
reset_on_save = false
speed_scale = 2.35
libraries = {
"": SubResource("AnimationLibrary_r5h8y")
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-7.5, 0)
shape = SubResource("RectangleShape2D_xctfb")

[node name="TakeArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="TakeArea"]
position = Vector2(-7.5, 0)
shape = SubResource("RectangleShape2D_uxxx6")

[connection signal="body_entered" from="TakeArea" to="." method="_on_take_area_body_entered"]
[connection signal="body_exited" from="TakeArea" to="." method="_on_take_area_body_exited"]
